--- a/assets/styles/claris/_syntax.sass
+++ b/assets/styles/claris/_syntax.sass
@@ -42,12 +42,13 @@ pre
 
 
 .highlight
+  position: relative
   background: var(--code-bg) !important
   // border-radius: 0.5rem
   border-radius: 0.2rem
-  position: relative
-  padding: 0 1rem
-  margin: 1.5rem auto 1rem auto
+  margin: 1.5rem auto 0 auto
+  width: 100%
+  font-family: var(--font)
   & + &
     margin-top: 2.25rem
   &:hover > div
@@ -66,9 +67,24 @@ pre
     border-radius: 8px
     // border: 0.25px solid var(--code-scrollbar-thumb-border)
 
+  &_inner
+    position: relative
+    display: grid
+    max-width: 100%
+    padding: 0 1rem
+    border-radius: 0 0.2rem 0.2rem 0
+    overflow-x: auto
+    // FIXME: Show overflow when the screen is wide enough
+    // Requires major changes to layout to avoid overlap with sidebar
+    // @media screen and (min-width: $screenViewBreakpointWidthTwoColumn)
+    //   overflow-x: auto
+    //   &:hover
+    //     overflow-x: visible
+
   .lang
     position: absolute
-    // background-color: var(--bg)
+    color: var(--code-text)
+    background-color: var(--code-bg)
     top: 0
     right: 0
     text-align: right
@@ -82,7 +98,7 @@ pre
     opacity: 0
     color: var(--code-text)
   &:hover .lang
-    opacity: 0.5
+    opacity: 0.75
   & &
     margin: 0
   pre
@@ -126,17 +142,6 @@ pre
     border: inherit
     border-radius: inherit
     background-color: inherit
-
-  &_inner
-    display: grid
-    width: 100%
-    border-radius: 0 0.2rem 0.2rem 0
-    overflow-x: auto
-    @media screen and (min-width: $screenViewBreakpointWidthTwoColumn)
-      overflow-x: auto
-      &:hover
-        overflow-x: show
-    position: relative
 
 
 .err
